Fix collapsing project cards

--- a/style/home/projects.scss
+++ b/style/home/projects.scss
@@ -1,9 +1,16 @@
 $width-project-banner: 240px;
 
 #games {
+    .col-3 {
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+
     .project-card {
-        width: 300px;
-        height: 200px;
+        width: 100%;
+        aspect-ratio: 16 / 9;
+        max-height: 200px;
+        max-width: 300px;
         margin: 0 auto 1rem;
         border-radius: 14px;
         overflow: hidden;
